--- a/extension/css/settings.css
+++ b/extension/css/settings.css
@@ -138,6 +138,10 @@ label{
     display: none;
 }
 
+.tabBox .content div > div {
+	display: block;
+}
+
 .tabBox .content div.active {
     display: block;
 }
@@ -185,4 +189,54 @@ label{
 .donation_amount {
     font: bold 10pt Helvetica, Arial, sans-serif;
     color: green;
+}
+
+.subtitle {
+	font-size: 14px;
+	font-weight: bold;
+	color: #082247;
+	margin-bottom: 5px;
+}
+
+#scrobbleLoginButton.controlButton,
+#scrobbleLogoutButton.controlButton {
+	width: 100%;
+	-webkit-box-shadow: 0px 0px 3px #000;
+}
+
+#scheduler {
+	height: 60px;
+	overflow: hidden;
+}
+
+#schedule_enable {
+    margin: -2px 150px 0px 0px;
+    background-color:#EFEFEF;
+    border-radius:4px;
+    border:1px solid #D0D0D0;
+    overflow:auto;
+    width: 58px;
+    float: right;
+}
+
+#schedule_enable label {
+    float:left;
+    width:2.0em;
+    cursor: pointer;
+}
+
+#schedule_enable label span {
+    text-align:center;
+    padding:3px 0px;
+    display:block;
+}
+
+#schedule_enable label input {
+    position:absolute;
+    top:-200px;
+}
+
+#schedule_enable input:checked + span {
+    background-color:#404040;
+    color:#F7F7F7;
 }
